// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toast System Snapshot Tests should match snapshot - empty 1`] = `<div />`;

exports[`Toast System Snapshot Tests should match snapshot - multiple toasts 1`] = `
<div>
  <div
    class="fixed top-20 right-4 z-[100] space-y-2 max-w-md"
  >
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-green-50 dark:bg-green-900/30 border-green-200 dark:border-green-800 text-green-800 dark:text-green-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big w-5 h-5 flex-shrink-0 mt-0.5 text-green-500 dark:text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Permanent
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-green-50 dark:bg-green-900/30 border-green-200 dark:border-green-800 text-green-800 dark:text-green-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big w-5 h-5 flex-shrink-0 mt-0.5 text-green-500 dark:text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Negative duration
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-green-50 dark:bg-green-900/30 border-green-200 dark:border-green-800 text-green-800 dark:text-green-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big w-5 h-5 flex-shrink-0 mt-0.5 text-green-500 dark:text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Success
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-red-50 dark:bg-red-900/30 border-red-200 dark:border-red-800 text-red-800 dark:text-red-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert w-5 h-5 flex-shrink-0 mt-0.5 text-red-500 dark:text-red-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Error
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-yellow-50 dark:bg-yellow-900/30 border-yellow-200 dark:border-yellow-800 text-yellow-800 dark:text-yellow-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-5 h-5 flex-shrink-0 mt-0.5 text-yellow-500 dark:text-yellow-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Warning
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-blue-50 dark:bg-blue-900/30 border-blue-200 dark:border-blue-800 text-blue-800 dark:text-blue-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-5 h-5 flex-shrink-0 mt-0.5 text-blue-500 dark:text-blue-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Info
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toast System Snapshot Tests should match snapshot - success toast 1`] = `
<div>
  <div
    class="fixed top-20 right-4 z-[100] space-y-2 max-w-md"
  >
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-green-50 dark:bg-green-900/30 border-green-200 dark:border-green-800 text-green-800 dark:text-green-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big w-5 h-5 flex-shrink-0 mt-0.5 text-green-500 dark:text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Permanent
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-green-50 dark:bg-green-900/30 border-green-200 dark:border-green-800 text-green-800 dark:text-green-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big w-5 h-5 flex-shrink-0 mt-0.5 text-green-500 dark:text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Negative duration
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-start gap-3 p-4 rounded-lg border shadow-lg animate-slide-in bg-green-50 dark:bg-green-900/30 border-green-200 dark:border-green-800 text-green-800 dark:text-green-300"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big w-5 h-5 flex-shrink-0 mt-0.5 text-green-500 dark:text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <p
        class="flex-1 text-sm font-medium"
      >
        Success message
      </p>
      <button
        class="flex-shrink-0 hover:opacity-70 transition-opacity"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
